--- a/styles.css
+++ b/styles.css
@@ -149,7 +149,7 @@ body {
 
 .font-size-buttons {
   position: absolute;
-  bottom: 1rem;
+  bottom: 2rem;
   left: 50%;
   padding: 0 !important;
   margin: 0 !important;
@@ -188,4 +188,15 @@ body {
   font-size: 24px;
   padding-top: 2px;
   padding-bottom: 2px;
+}
+
+#instructions {
+  position: fixed;
+  left: 1rem;
+  bottom: 0;
+}
+
+#instructionsText {
+  color: white;
+  font-size: x-small;
 }
